# mir-model-collection

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test.py
src/: lib.rs
src/mir_model_collection/: __init__.py  env.py
src/mir_model_collection/models/: base.py  register.py
src/mir_model_collection/models/dummy/: __init__.py  model.py
