[project]
name = "mir-model-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chih-Pin Tan", email = "tanchihpin0517@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
